# RenPG-Maker

./: .gitignore  README.md  README_IT.md  build.sh  pyproject.toml  requirements.txt  start.bat  start.sh
img/: logo.icns
rpgm2vn/: __init__.py  assets.py  cli.py  generator.py  gui.py  map_renderer.py  parser.py  plugins.py  sdk_manager.py  string_edits.py  strings_editor.py  transpiler.py
rpgm2vn/templates/1080/game/: gui.rpy  options.rpy  screens.rpy
rpgm2vn/templates/720/game/: gui.rpy  options.rpy  screens.rpy
rpgm2vn/templates/DefaultTemplate/game/: options.rpy
tests/: test_strings_editor.py  test_transpiler.py
